<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/options">
        <menu>
            <item
                android:id="@+id/switch_mode"
                android:title="@string/switch_mode"
                android:icon="@drawable/ic_night_mode"
                app:actionLayout="@layout/switch_item" />
            <item
                android:id="@+id/change_lang"
                android:title="@string/change_lang"
                android:icon="@drawable/ic_change_lang"
                app:actionLayout="@layout/switch_item"/>
        </menu>
    </item>
</menu>
